# testing_robotframework

./: .cruft.json  .gitignore  README.md  pyproject.toml  tasks.py
resource/: resource.robot
results/: log.html  output.xml  report.html
tests/: conftest.py  simple_testcase.robot
